fix services bug on mobile phones.

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section {
 
 .services .card {
     background-color: white;
-    width: 20%;
+    width: 20em;
 
     box-shadow: 0 5px 25px rgba(1, 1, 1, 0.40);
     border-radius: 12px;
